--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,11 @@
     "botframework-webchat": "^4.5.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "react-simple-chatbot": "^0.6.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HTTPS=true&&PORT=443 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
