--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "botbuilder-dialogs": "~4.5.1",
         "botbuilder-testing": "~4.5.1",
         "dotenv": "^6.1.0",
+        "pdf-parse": "^1.1.1",
+        "pdf2json": "^1.1.8",
         "restify": "~8.3.3"
     },
     "devDependencies": {
